fix spacing in header
git-svn-id: https://svn.library.cornell.edu/dcapsskeleton/trunk@157 8403f5de-c59e-464c-a6ae-807b0a7e3462

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -107,7 +107,7 @@ a:active h4 {color: #fff; background: #0097dc;}
 ================================================== */
 
 header {background: #000; padding: 30px 0 0 0;}
-h1 {float: left; margin: 0;}
+h1 {float: left; margin: 0; margin-bottom: 30px;}
 h1 a,
 h1 a:hover {display: block; text-indent: -9999px; width: 552px; height: 66px; background: url("../images/layout/dcaps-logo.png") no-repeat;}
 
@@ -127,7 +127,7 @@ h1 a:hover {display: block; text-indent: -9999px; width: 552px; height: 66px; ba
 ================================================== */
 
 nav {background: #000;}
-nav ul#main-menu {list-style: none; margin: 0 0 0 90px;}
+nav ul#main-menu {list-style: none;}
 nav ul#main-menu li {float: left; margin: 0 50px 0 0;}
 nav ul#main-menu a {display: block; color: #fff; text-transform: uppercase; border-bottom: 5px solid #000; padding: 5px 0;}
 nav ul#main-menu a:hover {background-color: inherit;}
